header + css common, specifico

--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Layout</title>
 </head>
 <body>
-    
+    <!-- contenitore  -->
+    <main>
+        <!-- testa contenitore  -->
+        <header>
+            <!-- box viola 1/4  -->
+            <div class="violet box">
+            </div>
+            <!-- box senape 2/4 -->
+            <div class="senape box">
+            </div>
+        </header>
+    </main>
 </body>
 </html>
