fix margin auto box + main / add 3/4 box

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
             <div class="senape box">
             </div>
         </header>
+        <!--  box blue 3/4 diviso in 4 -->
+        <section class="box blue">
+            <!-- testa bluebox  -->
+            <header>
+                
+            </header>
+        </section>
     </main>
 </body>
 </html>
