debug test 3 colonne

--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
             </div>
         </header>
         <!--  box blue 3/4 diviso in 4 -->
-        <section class="box blue">
+        <section class="blue box">
             <!-- testa bluebox  -->
-            <header>
-                
+            <header class="lightblue box">
             </header>
+            <!-- inner box LEFT  -->
+            <aside class="aside left"></aside>
+            <!-- inner box center  -->
+            <section class="center"></section>
+            <!-- inner box RIGHT -->
+            <aside class="aside right"></aside>
+
         </section>
     </main>
 </body>
