Es. finito parte LAYOUT

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <main>
         <!-- testa contenitore  -->
         <header>
-            <!-- box viola 1/4  -->
-            <div class="violet box">
+            <!-- box pink 1/4  -->
+            <div class="pink box">
             </div>
             <!-- box senape 2/4 -->
             <div class="senape box">
@@ -30,8 +30,11 @@
             <section class="center"></section>
             <!-- inner box RIGHT -->
             <aside class="aside right"></aside>
-
         </section>
+        <footer>
+            <div class="violet box">
+            </div>
+        </footer>
     </main>
 </body>
 </html>
