add commento html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <!-- inner box RIGHT -->
             <aside class="aside right"></aside>
         </section>
+        <!-- footer box 4/4 -->
         <footer>
             <div class="violet box">
             </div>
