cambio nome contenitore/main

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- contenitore  -->
-    <main>
+    <div class="container">
         <!-- testa contenitore  -->
         <header>
             <!-- box pink 1/4  -->
@@ -36,6 +36,6 @@
             <div class="violet box">
             </div>
         </footer>
-    </main>
+    </div>
 </body>
 </html>
