--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- testa contenitore  -->
         <header>
             <!-- box pink 1/4  -->
+            <div class="icon"></div>
             <div class="pink box">
             </div>
             <!-- box senape 2/4 -->
